Cycles 3d veiw rendered forgets object transform (scale) #30929

Closed
opened 2012-04-13 04:45:50 +02:00 by Brendon Murphy · 4 comments
Member

%%%hi
During testing of an addon I'm writing I uncovered a possible bug in cycles or blender.
http://www.pasteall.org/pic/show.php?id=30028
To reproduce run this addon: http://www.pasteall.org/30869/python
(it creates a test scene for rendering materials)
In cycles 3dview solid mode the plane object looks correct
In cycles 3dview rendered the loc/rot/scale are not applied to the plane & the cube is blocky
When rendering (f12) the plane is also correct.

In the addon line 200, I commented out:

bpy.ops.object.transform_apply(location=False, rotation=False, scale=True)

as I found this fixed the issue, however given that I only apply the scale I think there may be a bug in cycles or bmesh taking into account transforms.

%%%

%%%hi During testing of an addon I'm writing I uncovered a possible bug in cycles or blender. http://www.pasteall.org/pic/show.php?id=30028 To reproduce run this addon: http://www.pasteall.org/30869/python (it creates a test scene for rendering materials) In cycles 3dview solid mode the plane object looks correct In cycles 3dview rendered the loc/rot/scale are not applied to the plane & the cube is blocky When rendering (f12) the plane is also correct. In the addon line 200, I commented out: # bpy.ops.object.transform_apply(location=False, rotation=False, scale=True) as I found this fixed the issue, however given that I only apply the scale I think there may be a bug in cycles or bmesh taking into account transforms. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%The problem seems to come from the plane having scale 0 on the Z axis, and indeed only happens with Dynamic BVH, not Static BVH.%%%

%%%The problem seems to come from the plane having scale 0 on the Z axis, and indeed only happens with Dynamic BVH, not Static BVH.%%%

%%%Fix in svn now. Note though that you should avoid such scaling, it will cause many other things in Blender to fail, e.g. just transforming vertices in edit mode will not work for such degenerate matrices.%%%

%%%Fix in svn now. Note though that you should avoid such scaling, it will cause many other things in Blender to fail, e.g. just transforming vertices in edit mode will not work for such degenerate matrices.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30929
No description provided.