Fix #30929: cycles rendering of object with scale 0 on some axis did not work correct with instancing.

Actually such object will not work in many places, e.g. transforming vertices
in edit mode doesn't work and textures will be misapplied in Blender Internal,
so these should be avoided.