intern/cycles/util/util_transform.cpp
@@ -134,8 +134,16 @@ Transform transform_inverse(const Transform& tfm)
 	R.T = transform_identity();
 	M.T = tfm;
 
-	if(!transform_matrix4_gj_inverse(R.M, M.M))
-		return transform_identity();
+	if(!transform_matrix4_gj_inverse(R.M, M.M)) {
+		/* matrix is degenerate (e.g. 0 scale on some axis), ideally we should
+		   never be in this situation, but try to invert it anyway with tweak */
+		M.M[0][0] += 1e-8f;
+		M.M[1][1] += 1e-8f;
+		M.M[2][2] += 1e-8f;
+
+		if(!transform_matrix4_gj_inverse(R.M, M.M))
+			return transform_identity();
+	}
 
 	return R.T;
 }
